# TuneableCounterfactuals

./: .gitignore  README.md  pyproject.toml  requirements.txt
evaluations/mimic/: qualitative_evaluation.ipynb  scoring_evaluation.ipynb  scoring_fuction_graph_generators.ipynb
evaluations/mnist/: baseline_comparison.ipynb  evaluations.ipynb  prototype_comparison.ipynb  qualitative_evaluations.ipynb  qualitative_evaluations_with_scores.ipynb  quantiative_baseline.ipynb  quantiative_novel.ipynb  quantiative_prototype.ipynb  results_plotter.ipynb  results_prototype.pkl  scores_evaluations.ipynb  shap_evaluation.ipynb
figures/: counterfactual_distances.eps  mimic_counterfactual_example.eps  mnist_changeability_example.eps  mnist_counterfactual_example.eps  mnist_counterfactual_example_time_scores.eps  mnist_counterfactual_proto_example.eps  mnist_counterfactual_trad_example.eps  mnist_counterfactual_tuneable_example_many.eps  mnist_shap_example.eps  overall_figure.drawio  scoring.eps  single_variable_explainer_training.eps
src/explainer/: explainer.py  scorer.py  searcher.py  single_variable_explainer.py
src/searches/: depth_first_search.py
src/tuneable_counterfactuals_explainer/: explainer.py  scorer.py  searcher.py  single_variable_explainer.py
writeup/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  ref.bib
writeup/figures/: counterfactual_features_changed.eps  mimic_counterfactual_example.eps  mnist_changeability_example.eps  mnist_counterfactual_example.eps  mnist_counterfactual_proto_example.eps  mnist_counterfactual_trad_example.eps  (+1 more)
(+11 files in other folders)
