[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuneable_counterfactuals_explainer"
version = "0.0.1"
authors = []
description = "A python package for generating counterfactual explanations for machine learning models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JoshanParmar/TuneableCounterfactuals"
Issues = "https://github.com/JoshanParmar/TuneableCounterfactuals/issues"

