[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuneable_counterfactuals_explainer"
version = "0.0.7"
authors = []
description = "A python package for generating counterfactual explanations for machine learning models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.26.1",
    "pandas >= 2.1.2",
    "tqdm >= 4.66.4",
    "scikit-learn >= 1.3.2",
    "matplotlib >= 3.8.0",
]

[project.urls]
Homepage = "https://github.com/JoshanParmar/TuneableCounterfactuals"
Issues = "https://github.com/JoshanParmar/TuneableCounterfactuals/issues"


